--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "eslint": "^8.36.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.0",
     "prettier": "2.8.4",
     "vite": "^4.1.0"
   },
@@ -17,5 +20,9 @@
     "autoprefixer": "^10.4.14",
     "postcss-preset-env": "^8.0.1",
     "swiper": "^9.0.4"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*{js,html,css,json}": "prettier --write"
   }
 }
